Fix alignment of logo/title

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -265,21 +265,22 @@ Begin Navbar style
 }
 
 #nav-logo {
-  padding: 5px;
-  height: 50px;
-  vertical-align: middle;
   display: inline-block;
+}
+#nav-logo img {
+	padding: 3px;
+	height: 50px;
 }
 
 #nav-title {
-  display: inline-block;
-  font-size: 20px;
-  font-weight: 700;
   vertical-align: middle;
+  display: inline-block;
+  line-height: 1em;
+  font-weight: 700;
   font-family: 'Boomer-Bold';
-  text-transform: uppercase;
+  font-size: 20px;
   color: #fff;
-  line-height: 3em;
+  text-transform: uppercase;
 }
 @media (max-width: 400px) {
   #nav {
